--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
     "jsdom": "^26.0.0",
+    "prettier": "3.5.3",
     "typescript": "~5.8.2",
     "vite": "^6.2.2",
     "vitest": "^3.0.9",
