--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vue/tsconfig": "^0.7.0",
     "jsdom": "^26.0.0",
     "prettier": "3.5.3",
+    "sass-embedded": "^1.86.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.2",
     "vitest": "^3.0.9",
